Fix width of book columns on mobile.

--- a/typesense.org/assets/typesense.css
+++ b/typesense.org/assets/typesense.css
@@ -120,7 +120,7 @@ ul#goodreads-results {
 }
 
 #goodreads-results li {
-    width: 8.5em;
+    width: 7.5em;
     height: 12em;
     float: left;
     margin: 0 1em 1em 0;
